<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textMessageHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputMessageLabel" />

    <EditText
        android:id="@+id/inputMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputMessageHint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textFontSizeHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputFontSizeLabel" />

    <SeekBar
        android:id="@+id/inputFontSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="36"
        android:progress="6" />

    <TextView
        android:id="@+id/textFontSizeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="42dp" />

    <TextView
        android:id="@+id/textColorHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputTextColorLabel" />

    <Spinner
        android:id="@+id/inputColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textTypefaceHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputTypefaceLabel" />

    <Spinner
        android:id="@+id/inputTypeface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPreviewLabel" />

    <TextView
        android:id="@+id/textPreviewHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(Swipe from the left to see the image preview!)" />

</LinearLayout>
